# lakebase-foreachwriter

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  databricks.yml  pyproject.toml  repro_results.md
.github/workflows/: ci.yml  perf-hermetic.yml  release.yml
notebooks/: populate_kafka.py  reproduce_latency_bug.py  rtm_latency_test.py
src/lakebase_foreachwriter/: LakebaseForeachWriter.py  __init__.py
tests/: __init__.py  benchmark.py  compare_perf_results.py  perf_runner.py  performance_profiles.json  test_foreachwriter.py  test_integration.py  test_local_postgres.py  test_perf_hermetic.py  test_reliability.py  test_writer.py
tests/fakes/: __init__.py  fake_psycopg.py
